WIP more stable

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -1,13 +1,13 @@
 body {
-  font-family: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
+  //font-family: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
   //max-width: 600px;
-  margin: 0 auto;
-  padding-top: 72px;
-  -webkit-font-smoothing: antialiased;
-  font-size: 1.125em;
-  background-color: #555559;
-  color: #333;
-  line-height: 1.5em;
+  //margin: 0 auto;
+  padding-top: 30px;
+  //-webkit-font-smoothing: antialiased;
+  //font-size: 1.125em;
+  //background-color: #ddddde;
+  //color: #333;
+  //line-height: 1.5em;
 }
 
 h1, h2, h3 {
@@ -35,13 +35,23 @@ a:hover {
 }
 
 
-#clocks {
-
-  display: flex;
-  flex-wrap: wrap;
-}
 
 .clock {
+  width: 280px;
+}
+
+.clock > .panel {
+
+  margin: 4px 2px 2px 2px;
+}
+
+#clocks {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #eee;
+}
+
+.time {
  font-size: 100px;
  line-height: 1.2em;
 }
@@ -53,6 +63,6 @@ a:hover {
 
 .close {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 10px;
+  right: 10px;
 }
