--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -66,3 +66,16 @@ a:hover {
   top: 10px;
   right: 10px;
 }
+
+
+.graph-container {
+  padding: 5px;
+  margin: 3px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: #999;
+}
+
+.graph-container .btn {
+  margin-top: 5px;
+}
